; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_main.c_BotAIRegularUpdate.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/game/extr_ai_main.c_BotAIRegularUpdate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@regularupdate_time = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @BotAIRegularUpdate() #0 {
  %1 = load i64, i64* @regularupdate_time, align 8
  %2 = call i64 (...) @FloatTime()
  %3 = icmp slt i64 %1, %2
  br i1 %3, label %4, label %10

4:                                                ; preds = %0
  %5 = call i32 (...) @trap_BotUpdateEntityItems()
  %6 = call i64 (...) @FloatTime()
  %7 = sitofp i64 %6 to double
  %8 = fadd double %7, 3.000000e-01
  %9 = fptosi double %8 to i64
  store i64 %9, i64* @regularupdate_time, align 8
  br label %10

10:                                               ; preds = %4, %0
  ret void
}

declare dso_local i64 @FloatTime(...) #1

declare dso_local i32 @trap_BotUpdateEntityItems(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
